--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,7 @@ p {
 .split {
   display: flex;
   flex-direction: row;
-  min-height: 100vh;
+  min-height: 85vh;
 }
 
 .gutter {
@@ -70,6 +70,7 @@ p {
 .listItem:hover {
   background-color: var(--main-primary-color);
   color: var(--main-light-color);
+  box-shadow: 0px 0px 0.7rem var(--main-dark-color);
 }
 
 .listItem--left {
@@ -80,4 +81,16 @@ p {
 .listItem--title {
   font-size: 1.2rem;
   font-weight: 600;
+}
+
+.listItem--subtitle {
+  font-size: 1rem;
+}
+
+.list--add {
+  padding: 1rem;
+  margin-bottom: 1rem;
+  font-size: large;
+  font-weight: 700;
+  width: 100%;
 }
