--- a/src/style.css
+++ b/src/style.css
@@ -26,8 +26,27 @@ p {
   color: var(--main-primary-color);
   display: flex;
   align-items: center;
+  justify-content: space-between;
   box-shadow: 0px 0px 1rem var(--main-dark-color);
   margin-bottom: 1rem;
+}
+
+.header--branding {
+  display: flex;
+  align-items: center;
+}
+
+.header--logout {
+  cursor: pointer;
+}
+
+.separator {
+  margin: 0 0.5rem;
+  border-left: 1px solid var(--main-dark-color);
+}
+
+.header--user-icon {
+  padding-right: 10px;
 }
 
 .header--logo {
