--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,11 @@ body {
   background-color: var(--main-light-color);
 }
 
+body,
+html {
+  height: 100%;
+}
+
 h1,
 h2,
 h3,
@@ -18,6 +23,16 @@ h5,
 h6,
 p {
   all: unset;
+}
+
+#root {
+  height: 100%;
+}
+
+.app {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
@@ -123,4 +138,40 @@ p {
   font-size: large;
   font-weight: 700;
   width: 100%;
+}
+
+.btn {
+  color: var(--main-primary-color);
+  padding: 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 600;
+  width: 100%;
+}
+
+.btn--primary {
+  background-color: var(--main-primary-color);
+  color: var(--main-light-color);
+}
+
+.loginForm {
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 30rem;
+  margin: 0 auto;
+}
+
+.input {
+  width: 28rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: 1px solid var(--main-dark-color);
+  font-size: 1rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
 }
